--- a/index.css
+++ b/index.css
@@ -41,8 +41,8 @@ textarea{
 /* //enter textarea */
 
 #output{
-        width: 23vw;
-        height: 8vh;
+    width: 361px;
+    height: 60px;
         color: aquamarine;
         padding: 10px 10px; 
         outline: none;
@@ -56,8 +56,8 @@ textarea{
 
 button{
     
-        height: 6vh;
-        width: 6vw;     
+        height: 42px;
+        width: 103px;     
     border-radius: 6px;
     font-size: 24px;
     color: aliceblue;
@@ -66,8 +66,10 @@ button{
 }
 
 #btn{
-    margin-top: 3vh;
-    margin-left: 9vw;
+    position: relative;
+  top: 54px;
+  left: 142px;
+  width: 105px;
 }
 
 
@@ -75,7 +77,7 @@ button{
     width: 100px;
 margin: auto;
 position: relative;
-top: 74px;
+top: 137px;
 }
 img{
     margin-left: 19px;
