--- a/index.css
+++ b/index.css
@@ -2,6 +2,8 @@
     background-color: #2b2024; 
     box-sizing: border-box;
     font-family:'Times New Roman', Times, serif;
+    height: 100%;
+    width: 100%;
 }
 
 #container{
