--- a/index.css
+++ b/index.css
@@ -87,8 +87,8 @@ img{
 
 
 #msg{
-    color: antiquewhite;
-    font-size: large;
+    color: rgb(255, 231, 200);
+    font-size:large;
     font-weight: 500;
     margin-left:20px;
 }
